--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,6 @@ html,body {
 }
 
 .root-content-container{
-    padding-top: 70px;
     margin: 0 auto; /* This centers the container horizontally */
 }
 
@@ -66,10 +65,6 @@ a.anchor {
     object-fit: scale-down;
 }
 
-section {
-    background-color: white;
-}
-
 .home-section {
     height: 90vh;
 }
@@ -99,4 +94,8 @@ section {
 .landing-page {
     height: 100vh;
     background-color: transparent;
+}
+
+.background-neutral {
+    background-color: white;
 }
